restaurant/static/styles.css
.card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    display: grid;
    padding: 20px;
    column-gap: 10px;
    row-gap: 20px;
    grid-template-columns: 200px 200px auto;
    margin: 10px;
  }
  
  /* On mouse-over, add a deeper shadow */
  .card:hover {
    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
  }
  
  /* Add some padding inside the card container */
  #card-container {
    padding: 2px 16px;
    display: flex;
    flex-wrap: wrap;
  }

.dish-photo{
    height: 150px; 
    width: auto; 
    display: block; 
    /*margin: 0 auto;*/
}

.collapse-td {
    text-align: left;
    vertical-align: top;
}

#carousel-div{
    width: calc(80%);
    display: flex;
    justify-content: center; /* Wyśrodkowanie w poziomie */
    align-items: center; /* Wyśrodkowanie w pionie */
    height: 100%;
}

#orderList{
    width: calc(20%);
}

#main_container {
    display: flex;
}

.carousel-item {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    padding: 20px;
}

.carousel-content img {
    max-width: 100%;
    height: auto;
}

.carousel-dish{
    border: 2px solid black;
    border-radius: 10px;
    padding: 20px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
    background-color: white;
    width: 500px;
    margin: 0 auto;
    text-align: center;
}

.quantity-container {
    margin-top: 15px;
    display: flex;
}

.quantity-label {
    margin-right: 10px;
}

#nav_main{
    min-height: calc(100vh - 200px);
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

